<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/twitter_darkgray"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:background="@color/white"
            android:contentDescription="@string/tweet_profile_image_label"
            android:padding="1dp"
            android:src="@drawable/ic_launcher" />
    
        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/ivProfileImage"
            android:maxLines="1"
            android:ellipsize="end"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/tweet_user_name_label" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvUserName"
            android:layout_below="@+id/tvUserName"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/white"
            android:text="@string/tweet_user_name_label" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/twitter_gray" >

        <TextView
            android:id="@+id/tvTweetsCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="1px"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/tweet_count"
            android:textSize="12sp"
            android:textColor="@color/twitter_lightblack" />

        <TextView
            android:id="@+id/tvFollowingCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1px"
            android:layout_marginRight="1px"
            android:background="@color/white"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/tweet_following_count"
            android:textSize="12sp"
            android:textColor="@color/twitter_lightblack" />

        <TextView
            android:id="@+id/tvFollowerCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="1px"
            android:layout_marginBottom="1px"
            android:layout_marginRight="1px"
            android:background="@color/white"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/tweet_follower_count"
            android:textSize="12sp"
            android:textColor="@color/twitter_lightblack" />
        
    </LinearLayout>

    <fragment
        android:id="@+id/fragmentUserTimeline"
        android:name="com.codepath.apps.twitter.fragments.UserTimelineFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_timeline" />

</LinearLayout>
